--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT = 5000
 MONGO_URI = mongodb+srv://sushantnegee:12341234@cluster0.uweitew.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET = shammi
